began setting up initial layout in html to work with, no images or extra style until later

--- a/retro-word-guess.html
+++ b/retro-word-guess.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Retro Word Guess Game</title> <!-- replace with better title later -->
+
+    <!-- Bootstrap link for layout and styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">    
+
 </head>
 <body>
+    <!-- Bootstrap Container will hold everything -->
+    <div class="container">
+        <!-- Jumbotron holds the title section -->
+        <div class="jumbotron">
+          <div class="container">
+            <h1>Retro Word Guess Game</h1>
+            <h2> BEEP BOOP...Guess the word I'm thinking of, but don't guess a letter wrong or you lose a life!
+                 When they're all gone, it's GAME OVER.</h2>
+            <small>Type any letter to begin...</small>
+          </div>
+        </div>
+        <!-- END Jumbotron -->
+
+        <!-- Main Gameboard Area-->
+        <div class="row">
+
+
+        </div>
+        <!-- END Main Gameboard Area-->
+    </div>
+    <!-- END Bootstrap Container -->
     
 </body>
 </html>
