pseudocoding html sections

--- a/retro-word-guess.html
+++ b/retro-word-guess.html
@@ -24,12 +24,26 @@
         </div>
         <!-- END Jumbotron -->
 
-        <!-- Main Gameboard Area-->
+        <!-- Main Gameboard Area -->
         <div class="row">
 
+            <!-- Word to Guess Display -->
+            <!-- END Word to Guess Display -->
+
+            <!-- Wrong Letters Guessed -->
+            <!-- END Wrong Letters Guessed -->
+
+            <!-- Character Image -->
+            <!-- END Character Image -->
+
+            <!-- Life Counter - starts at 6 -->
+            <!-- END Life Counter -->
+
+            <!-- Wins and Losses -->
+            <!-- END Wins and Losses -->
 
         </div>
-        <!-- END Main Gameboard Area-->
+        <!-- END Main Gameboard Area -->
     </div>
     <!-- END Bootstrap Container -->
     
