outlined function to update the placeholder when a correct letter is guessed, also created a pseudocode location in HTML for gameplay messages to appear to the user. Will want to setup html page enough for basic tests soon so that I can test each function as I go and simplify debugging later.

--- a/retro-word-guess.html
+++ b/retro-word-guess.html
@@ -36,6 +36,9 @@
             <!-- Character Image -->
             <!-- END Character Image -->
 
+            <!-- Message Display area for play-by-play text e.g. "Ouch, lost a life!" "Good guess, it's a match!" etc. -->
+            <!-- END Message Display area -->
+
             <!-- Life Counter - starts at 6 -->
             <!-- END Life Counter -->
 
