linked javascript and utility functions to html page

--- a/retro-word-guess.html
+++ b/retro-word-guess.html
@@ -51,4 +51,6 @@
     <!-- END Bootstrap Container -->
     
 </body>
+<script src="./assets/javascript/utility-functions.js"></script>
+<script src="./assets/javascript/game.js"></script>
 </html>
