--- a/retro-word-guess.html
+++ b/retro-word-guess.html
@@ -26,6 +26,7 @@
 
         <!-- Main Gameboard Area -->
         <div class="row">
+            <div class="test" id="test">TESTING</div>
 
             <!-- Word to Guess Display -->
             <!-- END Word to Guess Display -->
